--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ org.gradle.daemon=false
 	loader_version=671a1bb
 
 # Mod Properties
-	mod_version = 1.1.0
-	maven_group = net.glass-launcher
-	archives_base_name = BIN-fabric-example-mod
+	mod_version = 1.0.0
+	maven_group = com.vendoau
+	archives_base_name = GrassBlockFix
